--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "repository": "github:jimblue/statamic-addon-webpacker.git",
   "bugs": "https://github.com/jimblue/statamic-addon-webpacker/issues",
   "homepage": "https://github.com/jimblue/statamic-addon-webpacker#readme",
-  "main": "Webpacker/src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "setup": "npm install",
     "clean": "rm -rf node_modules package-lock.json",
     "reset": "npm run clean && npm run setup",
     "update:prod": "ncu -u -a -p",
     "update:dev": "ncu -u -a -d",
-    "update:boilerplate": "ncu -u -a --packageFile Webpacker/boilerplate/package.json"
+    "update:boilerplate": "ncu -u -a --packageFile boilerplate/package.json"
   },
   "devDependencies": {
     "eslint": "5.8.0",
