--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "node-sass": "4.9.4",
     "npm-check-updates": "2.14.2",
     "opn": "5.4.0",
-    "ora": "^3.0.0",
+    "ora": "3.0.0",
     "postcss-loader": "3.0.0",
     "query-string": "6.2.0",
     "resolve-url-loader": "3.0.0",
