--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "root": true,
-  "extends": ["standard"],
+  "extends": ["eslint:recommended", "plugin:node/recommended"],
+  "plugins": ["node"],
   "env": {
     "node": true
   }
