--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   "main": "src/index.js",
   "scripts": {
     "setup": "npm install",
-    "clean": "rm -rf node_modules package-lock.json",
-    "reset": "npm run clean && npm run setup",
+    "reset": "npm run clear:modules && npm run setup",
+    "clear:modules": "rm -rf node_modules package-lock.json",
+    "clear:cache": "rm -rf node_modules/.cache/*",
     "update:prod": "ncu -u -a -p",
     "update:dev": "ncu -u -a -d",
     "update:boilerplate": "ncu -u -a --packageFile boilerplate/package.json"
   },
   "devDependencies": {
     "eslint": "5.9.0",
-    "eslint-config-standard": "12.0.0"
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "8.0.0",
+    "eslint-plugin-standard": "4.0.0"
   },
   "dependencies": {
     "@babel/core": "7.1.5",
     "babel-loader": "8.0.4",
     "browser-sync": "2.26",
     "chalk": "2.4.1",
-    "clean-webpack-plugin": "0.1.19",
+    "clean-webpack-plugin": "1.0.0",
     "css-loader": "1.0.1",
     "deepmerge": "2.2.1",
     "eslint": "5.9.0",
