--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "8.0.0",
-    "eslint-plugin-standard": "4.0.0"
+    "eslint-plugin-standard": "4.0.0",
+    "npm-check-updates": "2.14.3"
   },
   "dependencies": {
-    "@babel/core": "7.1.5",
+    "@babel/core": "7.1.6",
     "babel-loader": "8.0.4",
     "browser-sync": "2.26",
     "chalk": "2.4.1",
@@ -45,7 +46,6 @@
     "mini-css-extract-plugin": "0.4.4",
     "node-notifier": "5.3.0",
     "node-sass": "4.10.0",
-    "npm-check-updates": "2.14.2",
     "opn": "5.4.0",
     "ora": "3.0.0",
     "postcss-loader": "3.0.0",
@@ -57,7 +57,7 @@
     "stylelint-webpack-plugin": "0.10.5",
     "terser-webpack-plugin": "1.1.0",
     "webpack": "4.25.1",
-    "webpack-assets-manifest": "3.1.0",
+    "webpack-assets-manifest": "3.1.1",
     "webpack-build-notifier": "0.1.30",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-cli": "3.1.2",
