--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browser-sync": "2.26",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
+    "cross-env": "5.2.0",
     "css-loader": "1.0.1",
     "deepmerge": "2.2.1",
     "eslint": "5.9.0",
@@ -62,7 +63,6 @@
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
-    "webpack-hot-middleware": "2.24.3",
-    "yargs": "12.0.5"
+    "webpack-hot-middleware": "2.24.3"
   }
 }
