--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/plugin-transform-spread": "7.0.0",
     "@babel/preset-env": "7.1.6",
+    "@fullhuman/postcss-purgecss": "1.1.0",
     "babel-eslint": "10.0.1",
     "css-mqpacker": "7.0.0",
     "cssnano": "v4.1.7",
