--- a/Webpacker/default.yaml
+++ b/Webpacker/default.yaml
@@ -14,8 +14,9 @@ open_bundleanalyzer: false
 os_notify: true
 os_notify_sound: true
 browsersync_notify: true
+output_folder: dist
 dev_sourcemaps: cheap-module-eval-source-map
 prod_sourcemaps: (none)
-manifest: true
-vendors: true
-commons: true
+runtime: true
+vendor: true
+common: true
