--- a/boilerplate/.eslintrc
+++ b/boilerplate/.eslintrc
@@ -1,9 +1,17 @@
 {
   "root": true,
-  "extends": ["standard", "plugin:import/errors", "plugin:import/warnings", "plugin:promise/recommended"],
-  "plugins": ["import", "promise"],
-  "parser": "babel-eslint",
+  "extends": [
+    "standard",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:promise/recommended"
+  ],
+  "plugins": [
+    "import",
+    "promise"
+  ],
   "parserOptions": {
+    "parser": "babel-eslint",
     "sourceType": "module",
     "allowImportExportEverywhere": true,
     "codeFrame": false,
