--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "1.0.1",
     "eslint": "5.9.0",
     "eslint-loader": "2.1.1",
+    "fibers": "3.1.1",
     "file-loader": "2.0.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "image-webpack-loader": "4.5.0",
@@ -51,6 +52,7 @@
     "postcss-loader": "3.0.0",
     "query-string": "6.2.0",
     "resolve-url-loader": "3.0.0",
+    "sass": "1.15.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "stylelint": "9.9.0",
