--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -22,12 +22,12 @@
     "@fullhuman/postcss-purgecss": "1.1.0",
     "babel-eslint": "10.0.1",
     "css-mqpacker": "7.0.0",
-    "cssnano": "v4.1.7",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "8.0.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
+    "postcss-csso": "3.0.0",
     "postcss-preset-env": "6.4.0",
     "sort-css-media-queries": "1.4.1",
     "statamic-addon-webpacker": "latest",
